Fix navbar links overlapping on tablet

--- a/app/assets/stylesheets/kaui/header.less
+++ b/app/assets/stylesheets/kaui/header.less
@@ -7,8 +7,10 @@ header.kaui-navbar {
     border-bottom: 1px solid #ccc;
     margin-bottom: 40px;
 
-    .main-links{
+    .main-links, .navigation{
       .make-md-column(6);
+      .make-sm-column(6);
+      display: table;
     }
 
     img {
